--- a/csci201l_beacon_project/WebContent/homepage.html
+++ b/csci201l_beacon_project/WebContent/homepage.html
@@ -96,7 +96,30 @@
 
 	</div>
 
+	<!-- Modal -->
+	<div class="modal-background">
+		
+		<!-- Modal content -->
+		
+		<div class="modal-content">
+			<div id="modal-content__header">Create New Disaster Thread</div>
+			<input class="form-control" type="text" id="thread-input-id" placeholder="Thread Title">
+			<div>
+				<label id="category-label-id" for="form__categories-id">Category:</label>
+				<select name="categories" id="form__categories-id">
+	                <option value="Fire">Fire</option>
+	                <option value="Earthquake">Earthquake</option>
+	                <option value="Tornado">Tornado</option>
+	                <option value="Hurricane">Hurricane</option>
+	            </select>
+            </div>
+            <div class="modal-content__buttons">
+            	<button id="submit-btn-id" class="btn btn-primary">Submit</button>
+            	<button id="discard-btn-id" class="btn btn-secondary">Discard</button>
+            </div>      
+		</div>
 	
+	</div>
 
 
 		
@@ -111,6 +134,7 @@
   	</script>
 
   	<script src="navbar.js"></script>
+  	<script src="homepage.js"></script>
 	
 </body>
 </html>
