minor naming changes

--- a/csci201l_beacon_project/WebContent/homepage.html
+++ b/csci201l_beacon_project/WebContent/homepage.html
@@ -44,7 +44,7 @@
 
 
 	<!-- Main Content -->
-	<div class="content-modifiers">
+	<div class="content-header">
 		<form class="form" id="filters-form-id">
 			<label id="category-label-id" for="form__categories-id">Category:</label>
             <select name="categories" id="form__categories-id">
