--- a/csci201l_beacon_project/WebContent/disaster_thread.html
+++ b/csci201l_beacon_project/WebContent/disaster_thread.html
@@ -122,7 +122,8 @@
 					<input class="form-control" type="text" id="post-state-input-id" placeholder="State">
 				</div>
 				<textarea class="form-control" id="post-info-input-id" placeholder="Info"></textarea>
-
+				<!--- NEED TO IMPLEMENT -->
+				<!-- add option to upload and display image -->
 	            <div class="modal-content__buttons">
 	            	<button id="submit-btn-id" class="btn btn-primary">Submit</button>
 	            	<button id="discard-btn-id" class="btn btn-secondary">Discard</button>
