minor layout fixes

--- a/csci201l_beacon_project/WebContent/homepage.html
+++ b/csci201l_beacon_project/WebContent/homepage.html
@@ -68,28 +68,28 @@
 	<div class="content">
 		<!-- PLACEHOLDER - Threads will be created dynamically -->
 		<div class="thread">
-			<div class="thread__tag">
+			<div class="thread-tag">
 				Category
 			</div>
-			<div class="thread__name">
+			<div class="thread-name">
 				Name of Disaster Thread
 			</div>
 		</div>
 
 		<div class="thread">
-			<div class="thread__tag">
+			<div class="thread-tag">
 				Category
 			</div>
-			<div class="thread__name">
+			<div class="thread-name">
 				Name of Disaster Thread
 			</div>
 		</div>
 
 		<div class="thread">
-			<div class="thread__tag">
+			<div class="thread-tag">
 				Category
 			</div>
-			<div class="thread__name">
+			<div class="thread-name">
 				Name of Disaster Thread
 			</div>
 		</div>
