added and fixed form attributes

--- a/csci201l_beacon_project/WebContent/post_page.html
+++ b/csci201l_beacon_project/WebContent/post_page.html
@@ -13,8 +13,8 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">Beacon</a>
-		<form class="form form-inline" id="search-form-id">
-  			<input class="form-control" type="text" id="searchbar-id" placeholder="Search">
+		<form class="form form-inline" id="search-form-id" action="" method="GET">
+  			<input name="search_title" class="form-control" type="text" id="searchbar-id" placeholder="Search">
   		</form>
 		<div class="user">
 			<i class="fas fa-user"></i>
